--- a/Quality/Quality/Areas/StyleManagement/Views/PrintBarcode/Index.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/PrintBarcode/Index.cshtml
@@ -262,6 +262,9 @@
                     }
                 });
             }
+            else {
+                msg.WithInfo("Please select data before print.");
+            }
         });
 
         QueryButtonBind();
