--- a/Quality/Quality/Areas/StyleManagement/Views/PrintBarcode/PrintBarcode.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/PrintBarcode/PrintBarcode.cshtml
@@ -10,13 +10,13 @@
     }
 }
 
-<script src="~/Scripts/jquery-3.5.1.min.js"></script>
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/ThirdParty/plugins/JsBarcode/JsBarcode.all.min.js"></script>
-
 <style>
     @@media print {
         body {
-            counter-reset: page-number; /* 初始化，名字可自訂，數值為0 */
+            counter-reset: page-number; /* 初始
+                化，名字可自訂，數值為0 */
             text-align: center;
         }
 
