--- a/Quality/Quality/Areas/SampleRFT/Views/PFTperLine/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PFTperLine/Index.cshtml
@@ -89,19 +89,37 @@
                                     <label class="fontColor">Factory</label>
                                 </td>
                                 <td class="queryPadding">
-                                    @Html.DropDownList("Factory", (List<SelectListItem>)ViewBag.FactoryList, null, new { @class = "form-control inputStyle" })
+                                    <select class="form-control inputStyle" id="Factory" name="Factory">
+                                        @foreach (var item in (List<SelectListItem>)ViewBag.FactoryList)
+                                        {
+                                            string selected = item.Text.Equals(ViewBag.Factory) ? "selected" : "";
+                                            <option value="@item.Value" @selected>@item.Text</option>
+                                        }
+                                    </select>
                                 </td>
                                 <td class="queryPadding">
                                     <label class="fontColor">Year</label>
                                 </td>
                                 <td class="queryPadding">
-                                    @Html.DropDownList("Years", (List<SelectListItem>)ViewBag.YearsList, null, new { @class = "form-control inputStyle" })
+                                    <select class="form-control inputStyle" id="Years" name="Years">
+                                        @foreach (var item in (List<SelectListItem>)ViewBag.YearsList)
+                                        {
+                                            string selected = item.Text.Equals(ViewBag.Year) ? "selected" : "";
+                                            <option value="@item.Value" @selected>@item.Text</option>
+                                        }
+                                    </select>                                    
                                 </td>
                                 <td class="queryPadding">
                                     <label class="fontColor">Month</label>
                                 </td>
                                 <td class="queryPadding">
-                                    @Html.DropDownList("Month", (List<SelectListItem>)ViewBag.MonthList, null, new { @class = "form-control inputStyle" })
+                                    <select class="form-control inputStyle" id="Month" name="Month">
+                                        @foreach (var item in (List<SelectListItem>)ViewBag.MonthList)
+                                        {
+                                            string selected = item.Value.Equals(ViewBag.Month) ? "selected" : "";
+                                            <option value="@item.Value" @selected>@item.Text</option>
+                                        }
+                                    </select>                                    
                                 </td>
                                 <td class="queryPadding">
                                     <input class="site-btn btn-gy btn-sm" type="submit" name="name" id="btnQuery" value="Query" />
